--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,3 +1,6 @@
+- meta og: { title: "Tribo Viva - #{resource.title}", description: "#{resource.products_description}",
+             url: request.url, image: resource.image.url }
+
 h2 = resource.title
 p
   strong = t('activerecord.attributes.offer.value')
