--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,3 +1,6 @@
+- meta og: { title: "Tribo Viva", description: "Lorem ipsum Dolore mollit nisi ad consectetur in do quis do labore incididunt consequat sit Ut fugiat cupidatat aliqua enim sed.",
+             url: request.url, image: "#{asset_url('logo.png')}" }
+
 h1 Ofertas válidas
 - @valid_offers.each do |offer|
   = image_tag offer.image.url
