--- a/app/assets/stylesheets/base/_variables-colors.scss
+++ b/app/assets/stylesheets/base/_variables-colors.scss
@@ -1,3 +1,13 @@
-$error: #f05f5c;
-$success: #aab971;
-$info: #5e98a3;
+$error:           #f05f5c;
+$success:         #aab971;
+$info:            #5e98a3;
+
+$brown-light:     #e8decd;
+$brown-medium:    #736856;
+$brown-dark:      #463f32;
+
+$black-medium:    #333333;
+
+$green-light:     #687c52;
+
+$yellow-medium:   #fedc01;
