Creates offers section

--- a/app/assets/stylesheets/base/_variables-colors.scss
+++ b/app/assets/stylesheets/base/_variables-colors.scss
@@ -3,7 +3,7 @@ $success:         #aab971;
 $info:            #5e98a3;
 
 $brown-light:     #e8decd;
-$brown-medium:    #736856;
+$brown-medium:    #998c76;
 $brown-dark:      #463f32;
 
 $black-medium:    #333333;
