--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -10,6 +10,82 @@ section.hero
          span.hero__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris
 
 section.offers
+  .container
+    .row
+      .col-sm-12.col-md-10.col-centered
+        h2.text--green
+          span.title--up Ofertas da Semana
+          span.small Porto Alegre
+        .row
+          .col-md-4
+            article.card
+              .card__image style="background-image: url(http://placehold.it/300x300);"
+              .card__info
+                p.card__info__price
+                  span R$ 60,OO
+                  span.small
+                    |  / valor un. da cota
+                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
+                span.card__info__place
+                  span.glyphicon.glyphicon-map-marker
+                  | Bonfim
+              .card__action
+                button.btn.btn--md.btn--block.btn--green Comprar
+              .card__progress
+                .pull-left.text-left
+                  .span 10/20 cotas
+                  .small restantes
+                .pull-right.text-right
+                  .span 3 dias
+                  .small restantes
+                .progress
+                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
+          .col-md-4
+            article.card
+              .card__image style="background-image: url(http://placehold.it/300x300);"
+              .card__info
+                p.card__info__price
+                  span R$ 60,OO
+                  span.small
+                    |  / valor un. da cota
+                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
+                span.card__info__place
+                  span.glyphicon.glyphicon-map-marker
+                  | Bonfim
+              .card__action
+                button.btn.btn--md.btn--block.btn--green Comprar
+              .card__progress
+                .pull-left.text-left
+                  .span 10/20 cotas
+                  .small restantes
+                .pull-right.text-right
+                  .span 3 dias
+                  .small restantes
+                .progress
+                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
+          .col-md-4
+            article.card
+              .card__image style="background-image: url(http://placehold.it/300x300);"
+              .card__info
+                p.card__info__price
+                  span R$ 60,OO
+                  span.small
+                    |  / valor un. da cota
+                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
+                span.card__info__place
+                  span.glyphicon.glyphicon-map-marker
+                  | Bonfim
+              .card__action
+                button.btn.btn--md.btn--block.btn--green Comprar
+              .card__progress
+                .pull-left.text-left
+                  .span 10/20 cotas
+                  .small restantes
+                .pull-right.text-right
+                  .span 3 dias
+                  .small restantes
+                .progress
+                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
 
 h1 Ofertas válidas
 - @valid_offers.each do |offer|
