--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-  color: $black-medium;
+  color: $brown-dark;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 16px;
