--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -6,6 +6,14 @@ h3,
 h4 {
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
+
+  // Nesting to ovewrite bootstrap's specificity
+  .small {
+    font-size: 75%;
+    color: inherit;
+    font-weight: 300;
+    margin-left: 15px;
+  }
 }
 
 h1 { font-size: 33px; }
@@ -16,9 +24,6 @@ h1 { font-size: 33px; }
   text-transform: uppercase;
   font-weight: 400;
 }
-
-
-
 
 // ==== Text colors
 
