--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -87,6 +87,27 @@ section.offers
                 .progress
                   .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
 
+section.about
+  .container
+    .row
+      .col-sm-12.col-md-10.col-centered
+        .row
+          .col-md-4
+            h2.title--up.text--yellow Sobre a TriboViva
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt u labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          .col-md-4
+            h2.title--up.text--yellow Guia de Produtores
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt u labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          .col-md-4
+            h2.title--up.text--brown Fique Conectado
+            .big
+              = link_to 'Facebook', root_path
+            .big Inscreva-se na nossa newsletter
+            .input-group
+              input.form-control type="text" placeholder="example@email.com"
+                .span.input-group-btn
+                  button.btn.btn--md.btn--block.btn--green type="button" OK
+
 h1 Ofertas válidas
 - @valid_offers.each do |offer|
   = image_tag offer.image.url
