--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -1,3 +1,3 @@
 header.header
   .container
-    = link_to 'TriboViva', root_path, class: 'header__logo'
+    = link_to image_tag('logo-triboviva.png'), root_path, class: 'header__logo'
