--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -12,4 +12,4 @@ footer.footer
                 li
                   = link_to 'Sobre', root_path
                 li
-                  = link_to 'Contato', root_path
+                  = link_to 'Contato', 'mailto:contato@codeland.com.br?subject=Olá Tribo Viva!'
