--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -1,21 +1,15 @@
 doctype 5
 html
   head
-    = metamagic
     meta[charset="utf-8"]
-    meta[property="og:locale" content="pt_BR"]
-    meta[property="og:site_name" content="triboviva.com.br"]
     /[if lt IE 9]
       meta[content="text/html; charset=utf-8" http-equiv="Content-Type"]
       = javascript_include_tag "//html5shiv.googlecode.com/svn/trunk/html5.js"
     meta[name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"]
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    = csrf_meta_tags
 
   body
-    = initjs_tag "TriboViva"
-    = render 'pages/flash' if flash.any?
-    = render 'partials/header'
-    = yield
-    = render 'partials/footer'
+    .container
+      .col-md-8.col-md-offset-2
+        = yield
