--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -5,7 +5,7 @@
 }
 
 .header__logo {
-  background-color: $brown-dark;
+  background-color: $green-light;
   display: block;
   height: 100px;
   width: 310px;
