--- a/app/assets/stylesheets/molecules/_card.scss
+++ b/app/assets/stylesheets/molecules/_card.scss
@@ -1,7 +1,9 @@
 .card {
-  background-color: $brown-light;
+  background-color: $brown-dark;
   width: 100%;
-  margin-bottom: 30px
+  margin-bottom: 30px;
+
+  a:hover { text-decoration: none }
 }
 
 .card__image {
@@ -15,7 +17,7 @@
 .card__info { padding: 20px 30px 0px 30px; }
 
 .card__info__price {
-  color: $brown-dark;
+  color: white;
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 3px;
@@ -27,13 +29,19 @@
 }
 
 .card__info__title {
-  color: $green-light;
+  color: $yellow-medium;
   font-size: 24px;
   margin-top: 0;
   margin-bottom: 0;
+
+  a {
+    color: $yellow-medium;
+    &:hover { text-decoration: underline; }
+  }
 }
 
 .card__info__place {
+  color: white;
   font-size: 14px;
   font-weight: 400;
   .glyphicon {
@@ -47,15 +55,16 @@
 }
 
 .card__progress {
-  padding: 10px 30px 20px 30px;
+  color: white;
   font-size: 13px;
+  padding: 10px 30px 20px 30px;
   .span {
-    line-height: 0.8;
     font-weight: bold;
+    line-height: 0.8;
   }
 
   .small {
-    margin-bottom: 3px;
     color: $brown-medium;
+    margin-bottom: 3px;
   }
 }
