--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -17,75 +17,35 @@ section.offers
           span.title--up Ofertas da Semana
           span.small Porto Alegre
         .row
-          .col-md-4
-            article.card
-              .card__image style="background-image: url(http://placehold.it/300x300);"
-              .card__info
-                p.card__info__price
-                  span R$ 60,OO
-                  span.small
-                    |  / valor un. da cota
-                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
-                span.card__info__place
-                  span.glyphicon.glyphicon-map-marker
-                  | Bonfim
-              .card__action
-                button.btn.btn--md.btn--block.btn--green Comprar
-              .card__progress
-                .pull-left.text-left
-                  .span 10/20 cotas
-                  .small restantes
-                .pull-right.text-right
-                  .span 3 dias
-                  .small restantes
-                .progress
-                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
-          .col-md-4
-            article.card
-              .card__image style="background-image: url(http://placehold.it/300x300);"
-              .card__info
-                p.card__info__price
-                  span R$ 60,OO
-                  span.small
-                    |  / valor un. da cota
-                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
-                span.card__info__place
-                  span.glyphicon.glyphicon-map-marker
-                  | Bonfim
-              .card__action
-                button.btn.btn--md.btn--block.btn--green Comprar
-              .card__progress
-                .pull-left.text-left
-                  .span 10/20 cotas
-                  .small restantes
-                .pull-right.text-right
-                  .span 3 dias
-                  .small restantes
-                .progress
-                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
-          .col-md-4
-            article.card
-              .card__image style="background-image: url(http://placehold.it/300x300);"
-              .card__info
-                p.card__info__price
-                  span R$ 60,OO
-                  span.small
-                    |  / valor un. da cota
-                h1.card__info__title.title--up Cesta de produtos naturais e artesanais
-                span.card__info__place
-                  span.glyphicon.glyphicon-map-marker
-                  | Bonfim
-              .card__action
-                button.btn.btn--md.btn--block.btn--green Comprar
-              .card__progress
-                .pull-left.text-left
-                  .span 10/20 cotas
-                  .small restantes
-                .pull-right.text-right
-                  .span 3 dias
-                  .small restantes
-                .progress
-                  .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
+          - @valid_offers.each do |offer|
+            .col-md-4
+              = link_to offer do
+                article.card
+                  .card__image style="background-image: url(#{offer.image.url});"
+                  .card__info
+                    p.card__info__price
+                      span = number_to_currency offer.value
+                      span.small
+                        |  / valor un. cota
+                    h1.card__info__title.title--up = link_to offer.title, offer_path(offer)
+                    span.card__info__place
+                      span.glyphicon.glyphicon-map-marker
+                      = offer.producer.name
+                  .card__action
+                    button.btn.btn--md.btn--block.btn--yellow Comprar
+                  .card__progress
+                    .pull-left.text-left
+                      .span
+                        = offer.stock
+                        |   cotas
+                      .small restantes
+                    .pull-right.text-right
+                      .span
+                        = l offer.offer_starts_at
+                        |  dias
+                      .small restantes
+                    .progress
+                      .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
 
 section.about
   .container
@@ -106,110 +66,4 @@ section.about
             .input-group
               input.form-control type="text" placeholder="example@email.com"
                 .span.input-group-btn
-                  button.btn.btn--md.btn--block.btn--green type="button" OK
-
-h1 Ofertas válidas
-- @valid_offers.each do |offer|
-  = image_tag offer.image.url
-  h2 = link_to offer.title, offer_path(offer)
-  p
-    strong = t('activerecord.attributes.offer.value')
-    br
-    = number_to_currency offer.value
-  p
-    strong = t('activerecord.attributes.offer.products_description')
-    br
-    = offer.products_description
-  p
-    strong = t('activerecord.attributes.offer.deliver_coordinator')
-    br
-    = offer.deliver_coordinator.name
-  p
-    strong = t('activerecord.attributes.offer.bank_account')
-    br
-    = offer.bank_account.bank
-  p
-    strong = t('activerecord.attributes.offer.producer')
-    br
-    = offer.producer.name
-  p
-    strong = t('activerecord.attributes.offer.stock')
-    br
-    = offer.stock
-  p
-    strong = t('activerecord.attributes.offer.operational_tax')
-    br
-    = number_to_currency offer.operational_tax
-  p
-    strong = t('activerecord.attributes.offer.coordinator_tax')
-    br
-    = number_to_currency offer.coordinator_tax
-  p
-    strong = t('activerecord.attributes.offer.offer_ends_at')
-    br
-    = l offer.offer_ends_at
-  p
-    strong = t('activerecord.attributes.offer.collect_ends_at')
-    br
-    = l offer.collect_ends_at
-  p
-    strong = t('activerecord.attributes.offer.offer_starts_at')
-    br
-    = l offer.offer_starts_at
-  p
-    strong = t('activerecord.attributes.offer.collect_starts_at')
-    br
-    = l offer.collect_starts_at
-
-h1 Ofertas concluídas
-- @finished_offers.each do |offer|
-  = image_tag offer.image.url
-  h2 = link_to offer.title, offer_path(offer)
-  p
-    strong = t('activerecord.attributes.offer.value')
-    br
-    = number_to_currency offer.value
-  p
-    strong = t('activerecord.attributes.offer.products_description')
-    br
-    = offer.products_description
-  p
-    strong = t('activerecord.attributes.offer.deliver_coordinator')
-    br
-    = offer.deliver_coordinator.name
-  p
-    strong = t('activerecord.attributes.offer.bank_account')
-    br
-    = offer.bank_account.bank
-  p
-    strong = t('activerecord.attributes.offer.producer')
-    br
-    = offer.producer.name
-  p
-    strong = t('activerecord.attributes.offer.stock')
-    br
-    = offer.stock
-  p
-    strong = t('activerecord.attributes.offer.operational_tax')
-    br
-    = number_to_currency offer.operational_tax
-  p
-    strong = t('activerecord.attributes.offer.coordinator_tax')
-    br
-    = number_to_currency offer.coordinator_tax
-  p
-    strong = t('activerecord.attributes.offer.offer_ends_at')
-    br
-    = l offer.offer_ends_at
-  p
-    strong = t('activerecord.attributes.offer.collect_ends_at')
-    br
-    = l offer.collect_ends_at
-  p
-    strong = t('activerecord.attributes.offer.offer_starts_at')
-    br
-    = l offer.offer_starts_at
-  p
-    strong = t('activerecord.attributes.offer.collect_starts_at')
-    br
-    = l offer.collect_starts_at
+                  button.btn.btn--md.btn--block.btn--brown type="button" OK
