--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -41,8 +41,7 @@ section.offers
                       .small restantes
                     .pull-right.text-right
                       .span
-                        = l offer.offer_starts_at
-                        |  dias
+                        = distance_of_time_in_words(offer.offer_ends_at, Time.now)
                       .small restantes
                     .progress
                       .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
