--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -4,7 +4,7 @@
 section.offer-header
   .container
     .row
-      .col-md-10.col-centered
+      .col-sm-12.col-md-10.col-centered
         .row
           .col-sm-6.col-md-8
             .offer__header__image style="background-image: url(#{@offer.image.url});"
@@ -21,62 +21,53 @@ section.offer-header
               .small restantes
             .offer__header__price
               span = number_to_currency @offer.value
-              .small valor un. da cota
+              .small valor un. cota
             .offer__header__action
               = link_to 'COMPRAR', new_purchase_offer_path(@offer), class: 'btn btn--md btn--block btn--yellow'
 
 section.offer-info
   .container
     .row
-      .col-md-10.col-centered
-        h2 = link_to 'COMPRAR', new_purchase_offer_path(@offer)
+      .col-sm-12.col-md-10.col-centered
+        .row
+          .col-sm-6.col-md-8
+            .offer-info__products
+              h2.title--up.text--green O que vem na oferta
+              p = simple_format @offer.products_description
+            .offer-info__collect
+              h2.title--up.text--green Sobre a coleta
+              p As compras devem ser retiradas na data e local abaixo:
+              ul
+                li
+                  span.glyphicon.glyphicon-calendar
+                  span = l @offer.collect_starts_at
+                li
+                  span.glyphicon.glyphicon-calendar
+                  span = l @offer.collect_ends_at
+                li
+                  span.glyphicon.glyphicon-map-marker
+                  span = @offer.deliver_coordinator.address
+            .offer-info__tax
+              h2.title--up.text--green Taxas operacionais
+              p As taxas operacionais são aplicáveis sobre o valor unitário de cada cota da oferta.
+              - if @offer.operational_tax.present?
+                p
+                  strong.text--green = t('activerecord.attributes.offer.operational_tax')
+                  |&nbsp;
+                  = number_to_currency @offer.operational_tax
+              - if @offer.coordinator_tax.present?
+                p
+                  strong.text--green = t('activerecord.attributes.offer.coordinator_tax')
+                  |&nbsp;
+                  = number_to_currency @offer.coordinator_tax
 
-        h2 = @offer.title
-        p
-          strong = t('activerecord.attributes.offer.value')
-          br
-          = number_to_currency @offer.value
-        p
-          strong = t('activerecord.attributes.offer.products_description')
-          br
-          = @offer.products_description
-        p
-          strong = t('activerecord.attributes.offer.deliver_coordinator')
-          br
-          = @offer.deliver_coordinator.name
-        p
-          strong = t('activerecord.attributes.offer.bank_account')
-          br
-          = @offer.bank_account.bank
-        p
-          strong = t('activerecord.attributes.offer.producer')
-          br
-          = @offer.producer.name
-        p
-          strong = t('activerecord.attributes.offer.stock')
-          br
-          = "#{@offer.remaining} de #{@offer.stock}"
-        p
-          strong = t('activerecord.attributes.offer.operational_tax')
-          br
-          = number_to_currency @offer.operational_tax
-        p
-          strong = t('activerecord.attributes.offer.coordinator_tax')
-          br
-          = number_to_currency @offer.coordinator_tax
-        p
-          strong = t('activerecord.attributes.offer.offer_ends_at')
-          br
-          = l @offer.offer_ends_at
-        p
-          strong = t('activerecord.attributes.offer.collect_ends_at')
-          br
-          = l @offer.collect_ends_at
-        p
-          strong = t('activerecord.attributes.offer.offer_starts_at')
-          br
-          = l @offer.offer_starts_at
-        p
-          strong = t('activerecord.attributes.offer.collect_starts_at')
-          br
-          = l @offer.collect_starts_at
+          .col-sm-6.col-md-4
+            .offer-info__widget
+              h2.title--up.text--yellow Sobre o Produtor
+              .offer-info__widget__info
+                .widget__info__producer
+                  span.widget__producer__logo style="background-image: url(#{@offer.producer.logo});"
+                  span.widget__producer__name = @offer.producer.name
+              p = simple_format @offer.producer.description
+
+
