--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -1,3 +1,3 @@
-header.header style="#{'display: none;' if params[:action] == 'new_purchase'}"
+header.header style="#{'display: none;' if params[:action] == 'new_purchase' || params[:controller] == 'purchases'}"
   .container
     = link_to image_tag('logo-triboviva.png'), root_path, class: 'header__logo'
