Fixes stock remain counter in homepage

--- a/app/assets/stylesheets/base/_variables-colors.scss
+++ b/app/assets/stylesheets/base/_variables-colors.scss
@@ -1,5 +1,5 @@
 $error:           #f05f5c;
-$success:         #aab971;
+$success:         #687c52;
 $info:            #5e98a3;
 
 $brown-light:     #e8decd;
