--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -36,7 +36,7 @@ section.offers
                   .card__progress
                     .pull-left.text-left
                       .span
-                        = offer.stock
+                        = offer.remaining
                         |   cotas
                       .small restantes
                     .pull-right.text-right
