Creates about page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@
 // ==== Organisms
 @import "organisms/*";
 
+// ==== Pages
+@import "pages/*";
+
 // ==== NProgress
 // $nprogress-color : ;
 // $nprogress-height: ;
