--- a/app/assets/stylesheets/base/_variables-colors.scss
+++ b/app/assets/stylesheets/base/_variables-colors.scss
@@ -9,5 +9,6 @@ $brown-dark:      #463f32;
 $black-medium:    #333333;
 
 $green-light:     #687c52;
+$green-medium:    #327b6b;
 
 $yellow-medium:   #fedc01;
