Improves text and homepage style

--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -3,10 +3,10 @@
   width: 100%;
   position: absolute;
   z-index: 100;
+  background-color: $brown-medium;
 }
 
 .header__logo {
-  background-color: $green-light;
   display: block;
   height: 100px;
   width: 310px;
