--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -6,8 +6,8 @@ section.hero
    .container
      .row
        .col-md-8.col-centered
-         h1.title--xl Slogan da Tribo Viva
-         span.hero__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris
+         h1.title--xl Rede de Consumo Colaborativo
+         span.hero__description A Tribo Viva é um novo sistema de consumo, formado por cidadãos e produtores locais de alimentos orgânicos. Nossa rede exclui atravessadores, viabilizando o acesso contínuo e sustentável a uma alimentação com mais saúde, inclusão social e melhor custo-benefício para todos os envolvidos.
 
 section.offers
   .container
@@ -52,11 +52,15 @@ section.about
       .col-sm-12.col-md-10.col-centered
         .row
           .col-md-4
-            h2.title--up.text--yellow Sobre a TriboViva
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt u labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            h2.title--up.text--yellow COMO COMPRAR
+            p
+              | Quer consumir alimentos orgânicos com preços acessíveis, diretamente de produtores locais, por meio da colaboração com outros cidadãos e cidadãs?
+              = link_to ' Clique aqui.', about_path
           .col-md-4
-            h2.title--up.text--yellow Guia de Produtores
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt u labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            h2.title--up.text--yellow SEJA UM COORDENADOR DE ENTREGA
+            p
+              | Receba alimentos orgânicos no endereço da sua escolha, pagando pouco ou nada, conheça pessoas como você e seja um agente transformador da sua comunidade.
+              = link_to ' Clique aqui.', root_path
           .col-md-4
             h2.title--up.text--brown Fique Conectado
             .big
