--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -10,6 +10,6 @@ footer.footer
             .pull-right
               ul
                 li style="#{'display: none;' if params[:action] == 'new_purchase'}"
-                  = link_to 'Sobre', root_path
+                  = link_to 'Sobre', about_path
                 li
                   = link_to 'Contato', 'mailto:contato@codeland.com.br?subject=Olá Tribo Viva!'
