Improves style & text for purchase confirmation mailer

--- a/app/assets/stylesheets/atoms/_buttons.scss
+++ b/app/assets/stylesheets/atoms/_buttons.scss
@@ -27,3 +27,12 @@
     background-color: $brown-medium;
   }
 }
+
+.btn--green {
+  background-color: $green-medium;
+  color: white;
+  &:hover {
+    color: white;
+    // background-color: $brown-medium;
+  }
+}
