--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -40,10 +40,10 @@ section.offer-info
               ul
                 li
                   span.glyphicon.glyphicon-calendar
-                  span = l @offer.collect_starts_at
+                  span = l(@offer.collect_starts_at, format: :long)
                 li
                   span.glyphicon.glyphicon-calendar
-                  span = l @offer.collect_ends_at
+                  span = l(@offer.collect_ends_at, format: :long)
                 li
                   span.glyphicon.glyphicon-map-marker
                   span = @offer.deliver_coordinator.address
@@ -69,5 +69,3 @@ section.offer-info
                   span.widget__producer__logo style="background-image: url(#{@offer.producer.logo});"
                   span.widget__producer__name = @offer.producer.name
               p = simple_format @offer.producer.description
-
-
