--- a/app/views/offers/new_purchase.html.slim
+++ b/app/views/offers/new_purchase.html.slim
@@ -27,7 +27,7 @@ section.purchase
               .row
                 .col-sm-6
                   = f.label :amount, 'Cotas (máx 3)'
-                  = f.number_field :amount, min: 1, max: 3, class: 'form-control'
+                  = f.number_field :amount, value: 1, min: 1, max: 3, class: 'form-control'
                 .col-sm-6
                   .purchase-form__total
                     label Total
